# hardware-notes

STM32/BlackPill-STM32F411CEU6/: NOTES
STM32/BlackPill-STM32F411CEU6/hello_world_stm32/: Cargo.toml
STM32/BlackPill-STM32F411CEU6/hello_world_stm32/src/: main.rs
STM32/BlackPill-STM32F411CEU6/itm_stm32/: Cargo.toml
STM32/BlackPill-STM32F411CEU6/itm_stm32/.cargo/: config
STM32/BlackPill-STM32F411CEU6/itm_stm32/src/: main.rs
STM32/BlackPill-STM32F411CEU6/test_stm32_clock_freq/: Cargo.toml
STM32/BlackPill-STM32F411CEU6/test_stm32_clock_freq/src/: main.rs
