[package]
name = "test_stm32_clocks_freq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
stm32f4 = { version = "0.15.1", features = ["cortex-m-rt", "stm32f411"] }
stm32f4xx-hal = { version = "0.20.0", features = ["stm32f411"] }
